<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="shortcut_off">Stop Service</string>
    <string name="shortcut_on">Start Service</string>
    <string name="click_to_active">Click here to activate</string>
    <string name="service_state">Service state:</string>
    <string name="send_notification">Service Notification</string>
    <string name="invert_x">X-axis reverse</string>
    <string name="invert_y">Y-axis reverse</string>
    <string name="sensity_x">X-axis sensitivity</string>
    <string name="sensity_y">Y-axis sensitivity</string>
    <string name="show_floatwindow">Show floating ball in landscape</string>
    <string name="lock_floatwindow">Lock floating ball position</string>
    <string name="tran_floatwindow">floating ball opacity</string>
    <string name="size_floatwindow">floating ball size</string>
    <string name="service_actived">Long Press To Change Mode</string>
    <string name="deactive_service">Change Injection Mode</string>
    <string name="deactive_service_text">Mode 1 has the best performance. Mode 2 limits the rotation speed of the camera view.Mode 3 has a visible delay to the naked eye.</string>
    <string name="back">back</string>
    <string name="deactive">deactivate</string>
    <string name="deactive_success">Service deactivated.</string>
    <string name="privacy_title">Privacy</string>
    <string name="agree">agree</string>
    <string name="privacy_text">This APP will not collect any data.\n</string>
    <string name="exit">exit</string>
    <string name="active_title">Service Activation</string>
    <string name="active_text">You can choose one of these three activation methods:\n\n\t1.adb\n\t2.Shizuku\n\t3.root\n</string>
    <string name="copy_cmd">copy adb command</string>
    <string name="cmd_copied">adb command copied: \nadb shell </string>
    <string name="service_not_active">Service not activated</string>
    <string name="need_restart">Restart service to apply</string>
    <string name="input_100">Please input numbers from 0 to 100</string>
    <string name="input_400">Please input numbers from 0 to 400</string>
    <string name="gyro_notfound">Your Device Has No Gyroscope Sensor!</string>
    <string name="shizuku_notready">Shizuku not running</string>
    <string name="help_title">Help</string>
    <string name="ok">OK!</string>
    <string name="help_text">This APP can create a virtual GamePad and convert real-time gyroscope data to the GamePad\'s right stick within 0.05ms。\n\nIn simple terms, you can use the gyroscope to play games that support GamePad, such as Minecraft. These games will mistakenly recognize that there is a GamePad controlling the movement of the perspective, while the phone\'s gyroscope is the real controller.\n\nHere are some issues and answers when using this app to play Minecraft:\n\n1.The gyroscope sensitivity is different when walking and stopping?\nAnswer: Please find the "Controller" section in Minecraft settings, adjust the \"Sensitivity\" to about 25.\n\n2.Cannot open windows such as backpack, workbench, chat box, villager trading, etc.?\nAnswer: Click on the floating ball to temporarily pause the gyroscope.\n\n3.After turning off the gyroscope, the game perspective is always biased towards a certain direction?\nAnswer: First click on the floating ball to pause the gyroscope, and then turn off the gyroscope.\n\n4.Is there a high delay in gyroscope operation?\nAnswer: If your phone does not have a high refresh rate, both touch and gyroscope operations will have a longer delay. You can swipe left and right quickly with your fingers to determine whether there is a delay in touch operations, and determine whether the delay comes from the device itself or from my program. If you confirm that there is no delay in touch operations but there is a delay in gyroscope operations, you can provide feedback to me.\n\n5.Will using the gyroscope in online PVP games trigger an anti-cheating detection?\nAnswer: Only external devices can be detected.\n</string>
    <string name="connect_success">Successfully connected</string>
    <string name="connect_failed">Connection failed</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="noti_text">Click to open Setting</string>
    <string name="noti_title">Service is running…</string>
    <string name="noti_action">Stop service</string>
    <string name="noti_channel">Gyro Notification</string>
    <string name="app_name">MC Gyro</string>
    <string name="tile_name">Gyro</string>
    <string name="manaual_open">Please open my accessibility service</string>
    <string name="change_mode">ChangeToMode</string>
</resources>