<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <Button
            android:id="@+id/b"
            android:textSize="17sp"
            android:text="@string/click_to_active"
            android:textColor="@color/wrong"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textAllCaps="false" />

        <Switch
            android:id="@+id/s1"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service_state" />

        <Switch
            android:id="@+id/s2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_notification" />

        <Switch
            android:id="@+id/s3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invert_x" />

        <Switch
            android:id="@+id/s4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invert_y" />



        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="1">



            <TableRow>

                <TextView
                    android:gravity="center"
                    android:text="@string/sensity_x" />

                <EditText
                    android:id="@+id/e1"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="100"
                    android:inputType="number"
                    android:selectAllOnFocus="true" />
            </TableRow>

            <SeekBar
                android:id="@+id/sb1"
                android:layout_marginBottom="20dp"
                android:max="400" />

            <TableRow>

                <TextView
                    android:gravity="center"
                    android:text="@string/sensity_y" />

                <EditText
                    android:id="@+id/e2"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="100"
                    android:inputType="number"
                    android:selectAllOnFocus="true" />
            </TableRow>

            <SeekBar
                android:id="@+id/sb2"
                android:layout_marginBottom="20dp"
                android:max="400" />
        </TableLayout>



        <Switch
            android:id="@+id/s5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_floatwindow" />
        <LinearLayout
            android:id="@+id/ll"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <Switch
                android:id="@+id/s6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lock_floatwindow" />


            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

                <TableRow>

                    <TextView
                        android:gravity="center"
                        android:text="@string/tran_floatwindow" />

                    <EditText
                        android:id="@+id/e"
                        android:background="@null"
                        android:gravity="center"
                        android:hint="90"
                        android:inputType="number"
                        android:selectAllOnFocus="true" />
                </TableRow>

                <SeekBar
                    android:id="@+id/sb"
                    android:layout_marginBottom="20dp"
                    android:max="100" />

                <TableRow>

                    <TextView
                        android:gravity="center"
                        android:text="@string/size_floatwindow" />

                    <EditText
                        android:id="@+id/e3"
                        android:background="@null"
                        android:gravity="center"
                        android:hint="50"
                        android:inputType="number"
                        android:selectAllOnFocus="true" />
                </TableRow>

                <SeekBar
                    android:id="@+id/sb3"
                    android:layout_marginBottom="20dp"
                    android:max="100" />

            </TableLayout>

            <Switch
                android:id="@+id/s7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/volume_map" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>